--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,17 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+# For c# 
+[Oo]bj
+[Bb]in
+*.user
+*.suo
+*.[Cc]ache
+*.bak
+*.ncb
+*.log 
+*.DS_Store
+[Tt]humbs.db 
+_ReSharper.*
+*.resharper
+Ankh.NoLoad
